--- a/BLL/CartingService.Api.BLL.csproj
+++ b/BLL/CartingService.Api.BLL.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\DAL\CartingService.Api.DAL.csproj" />
   </ItemGroup>
 
 </Project>
