--- a/CartingService.Api.Web/appsettings.json
+++ b/CartingService.Api.Web/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Kafka": {
+    "Host": "localhost:9092",
+    "Topic": "demo1"
+  },
   "AllowedHosts": "*"
 }
